--- a/lunbo/lunbo.html
+++ b/lunbo/lunbo.html
@@ -5,10 +5,12 @@
     </head>
     <body>
         <div id="main"></div>
-        <script src="../jquery-3.2.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="./lunbo.js"></script>
         <script>
-            $("#main").lunbo({src:["./images/01.jpg","./images/02.jpg","./images/03.jpg","./images/04.jpg","./images/05.jpg"]});
+            $("#main").lunbo({
+                src:["./images/01.jpg","./images/02.jpg","./images/03.jpg","./images/04.jpg","./images/05.jpg"]
+            });
         </script>
     </body>
 </html>
